--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="style.css" />
-        <title>My Personal Website</title>
-    </head>
-    <body>
-        <h1>Hello World!</h1>
-        <script src="script.js"></script>
-    </body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <title>My Personal Website</title>
+    <script src="script.js"></script>
+  </head>
+
+  <body>
+    <div class="wrapper">
+      <nav class="navbar">
+        <div class="nav-title">John Finley <img src="FS_wiki.png" class="nav-image" alt="flatiron logo"/></div>
+        <div class="nav-links">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </body>
 </html>
