--- a/index.html
+++ b/index.html
@@ -7,18 +7,25 @@
   </head>
 
   <body>
-    <div class="wrapper">
+    <div class="nav-wrapper">
       <nav class="navbar">
         <div class="nav-title">John Finley <img src="FS_wiki.png" class="nav-image" alt="flatiron logo"/></div>
         <div class="nav-links">
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/.index.html">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </div>
       </nav>
+    </div>
+    <div class="body-wrapper">
+    <div class="profile-picture-wrapper"><img src="profile.jpg" class="profile-picture" alt="Profile Picture"></div>
+    <div class="profile-text">
+        <div> Hello! I'm John</div>
+        <div style="font-size: 18px"> Software Engineering Student based out of Denver, CO</div>
+    </div>
     </div>
   </body>
 </html>
