--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
           <ul>
             <li><a href="/.index.html">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </div>
@@ -24,7 +23,7 @@
     <div class="profile-picture-wrapper"><img src="profile.jpg" class="profile-picture" alt="Profile Picture"></div>
     <div class="profile-text">
         <div> Hello! I'm John</div>
-        <div style="font-size: 18px"> Software Engineering Student based out of Denver, CO</div>
+        <div style="font-size: 18px; color: black"> Software Engineering Student based out of Denver, CO</div>
     </div>
     </div>
   </body>
