--- a/projects.html
+++ b/projects.html
@@ -23,14 +23,13 @@
       </nav>
     </div>
     <div class="body-wrapper">
-      <div class="profile-picture-wrapper">
-        <img src="profile.jpg" class="profile-picture" alt="Profile Picture" />
+      <div class="project-1">
+        <div class="project-title">Calculator</div>
+        <div class="project-image">hello</div>
       </div>
-      <div class="profile-text">
-        <div>Hello! I'm John</div>
-        <div style="font-size: 20px; color: black">
-          Software Engineering Student Based Out Of Denver, CO
-        </div>
+      <div class="project-2">
+        <div class="project-title">Etch-A-Sketch</div>
+        <div class="project-image">hello</div>
       </div>
     </div>
   </body>
