Add projects page

--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
       </div>
       <div class="profile-text">
         <div>Hello! I'm John</div>
-        <div style="font-size: 20px; color: black">
+        <li style="font-size: 20px; color: black">
           Software Engineering Student Based Out Of Denver, CO
-        </div>
+        </li>
+        <li style="font-size: 20px; color: black">
+          Graduated with a degree in Mechanical Engineering
+        </li>
+        <li style="font-size: 20px; color: black">
+          Former Service Technician
+        </li>
       </div>
     </div>
   </body>
