--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>My Personal Website</title>
     <script src="./script.js"></script>
+    <script src="https://kit.fontawesome.com/e66ae3e757.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -23,11 +24,15 @@
       </nav>
     </div>
     <div class="body-wrapper">
-      <div class="project-1">
+      <div id="project-1">
         <div class="project-title">Calculator</div>
-        <div class="project-image">hello</div>
+        <div class="project-image"><img src="/Screen Shot 2022-06-05 at 8.52.49 PM.png" class="calculatorImage"></img></div>
+        <div style="display:flex; padding-top:5px">
+          <div class="tryButton"><a href="./calculator/index.html">Try It</a></div>
+          <div><a href="https://github.com/jfinley6/calculator" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+        </div>
       </div>
-      <div class="project-2">
+      <div id="project-2">
         <div class="project-title">Etch-A-Sketch</div>
         <div class="project-image">hello</div>
       </div>
