Finished project page

--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
       </div>
       <div class="profile-text">
         <div>Hello! I'm John</div>
-        <li style="font-size: 20px; color: black">
-          Software Engineering Student Based Out Of Denver, CO
-        </li>
-        <li style="font-size: 20px; color: black">
-          Graduated with a degree in Mechanical Engineering
-        </li>
-        <li style="font-size: 20px; color: black">
-          Former Service Technician
-        </li>
+        <ul style="margin: 0; padding: 15px">
+          <li style="font-size: 20px; color: black">
+            Software Engineering Student Based Out Of Denver, CO
+          </li>
+          <li style="font-size: 20px; color: black">
+            Graduated from Washington State University with a degree in Mechanical Engineering
+          </li>
+          <li style="font-size: 20px; color: black">
+            Former Service Technician
+          </li>
+        </ul>
       </div>
     </div>
   </body>
