--- a/projects.html
+++ b/projects.html
@@ -27,15 +27,19 @@
       <div id="project-1">
         <div class="project-title">Calculator</div>
         <div class="project-image"><img src="/Screen Shot 2022-06-05 at 8.52.49 PM.png" class="calculatorImage"></img></div>
-        <div style="display:flex; padding-top:5px">
-          <div class="tryButton"><a href="./calculator/index.html">Try It</a></div>
+        <div style="display:flex; align-items: center; padding-top:5px">
+          <div><a class="tryButton" href="./calculator/index.html">Try It</a></div>
           <div><a href="https://github.com/jfinley6/calculator" target="_blank"><i class="fa-brands fa-github"></i></a></div>
         </div>
       </div>
       <div id="project-2">
         <div class="project-title">Etch-A-Sketch</div>
-        <div class="project-image">hello</div>
+        <div class="project-image"><img src="/Screen Shot 2022-06-06 at 7.39.42 PM.png" class="calculatorImage"></img></div>
+        <div style="display:flex; align-items: center; padding-top:5px">
+          <div><a class="tryButton" href="./etch-a-sketch/">Try It</a></div>
+          <div><a href="https://github.com/jfinley6/etch-a-sketch" target="_blank"><i class="fa-brands fa-github"></i></a></div>
       </div>
     </div>
   </body>
+  
 </html>
