Rename project images

--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
     <div class="body-wrapper">
       <div id="project-1">
         <div class="project-title">Calculator</div>
-        <div class="project-image"><img src="./Screen Shot 2022-06-05 at 8.52.49 PM.png" class="calculatorImage"></img></div>
+        <div class="project-image"><img src="calculator.png" class="calculatorImage"></img></div>
         <div style="display:flex; align-items: center; padding-top:5px">
           <div><a class="tryButton" href="./calculator/index.html">Try It</a></div>
           <div><a href="https://github.com/jfinley6/calculator" target="_blank"><i class="fa-brands fa-github"></i></a></div>
@@ -34,7 +34,7 @@
       </div>
       <div id="project-2">
         <div class="project-title">Etch-A-Sketch</div>
-        <div class="project-image"><img src="./Screen Shot 2022-06-06 at 7.39.42 PM.png" class="calculatorImage"></img></div>
+        <div class="project-image"><img src="etch-a-sketch.png" class="calculatorImage"></img></div>
         <div style="display:flex; align-items: center; padding-top:5px">
           <div><a class="tryButton" href="./etch-a-sketch/">Try It</a></div>
           <div><a href="https://github.com/jfinley6/etch-a-sketch" target="_blank"><i class="fa-brands fa-github"></i></a></div>
