Redid navbar html and css

--- a/projects.html
+++ b/projects.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>My Personal Website</title>
     <script src="./script.js"></script>
     <script src="https://kit.fontawesome.com/e66ae3e757.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
-    <div class="nav-wrapper">
-      <nav class="navbar">
-        <div class="nav-title">
-          John Finley
-          <img src="FS_wiki.png" class="nav-image" alt="flatiron logo" />
-        </div>
-        <div class="nav-links">
-          <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./projects.html">Projects</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
+    <div class="navbar">
+      <ul>
+        <li id="font">John Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
+        <li><a href="./index.html">About</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="./blogs.html">Blogs</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
     </div>
-    <div class="body-wrapper">
+    <!-- <div class="body-wrapper">
       <div id="project-1">
         <div class="project-title">Calculator</div>
         <div class="project-image"><img src="calculator.png" class="calculatorImage"></img></div>
@@ -39,7 +33,7 @@
           <div><a class="tryButton" href="./etch-a-sketch/">Try It</a></div>
           <div><a href="https://github.com/jfinley6/etch-a-sketch" target="_blank"><i class="fa-brands fa-github"></i></a></div>
       </div>
-    </div>
+    </div> -->
   </body>
   
 </html>
