--- a/index.html
+++ b/index.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>My Personal Website</title>
     <script src="./script.js"></script>
   </head>
 
   <body>
-    <div class="nav-wrapper">
-      <nav class="navbar">
-        <div class="nav-title">
-          John Finley
-          <img src="FS_wiki.png" class="nav-image" alt="flatiron logo" />
-        </div>
-        <div class="nav-links">
-          <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./projects.html">Projects</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
+    <div class="navbar">
+      <ul>
+        <li id="font">John Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
+        <li><a href="./index.html">About</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="./blogs.html">Blogs</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
     </div>
-    <div class="body-wrapper">
+    <!-- <div class="body-wrapper">
       <div class="profile-picture-wrapper">
         <img src="profile.jpg" class="profile-picture" alt="Profile Picture" />
       </div>
@@ -40,6 +34,6 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
