--- a/blogs.html
+++ b/blogs.html
@@ -11,15 +11,15 @@
   </head>
 
   <body>
-      <div class="navbar" id="blogs">
-        <ul>
-          <li id="font">John&nbsp;Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
-          <li><a href="./index.html">About</a></li>
-          <li><a href="./index.html">Projects</a></li>
-          <li><a href="./index.html">Blogs</a></li>
-          <li><a href="./index.html">Contact</a></li>
-        </ul>
-      </div>
+    <div class="navbar" id="blogs">
+      <ul>
+        <li id="font">John&nbsp;Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
+        <li><a class="active" href="./index.html">About</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="./blogs.html">Blogs</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </div>
 
     <div id="wrapper-main">
       <div class="header">
