--- a/projects.html
+++ b/projects.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
     <title>My Personal Website</title>
     <script src="./script.js"></script>
-    <script src="https://kit.fontawesome.com/e66ae3e757.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
     <div class="navbar">
       <ul>
-        <li id="font">John Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
+        <li id="font">John&nbsp;Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
         <li><a href="./index.html">About</a></li>
         <li><a href="./projects.html">Projects</a></li>
         <li><a href="./blogs.html">Blogs</a></li>
@@ -35,5 +38,5 @@
       </div>
     </div> -->
   </body>
-  
+
 </html>
