--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,10 @@
 <html lang="en">
 
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
     <title>My Personal Website</title>
     <script src="./script.js"></script>
   </head>
@@ -10,7 +13,7 @@
   <body>
     <div class="navbar">
       <ul>
-        <li id="font">John Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
+        <li id="font">John&nbsp;Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
         <li><a href="./index.html">About</a></li>
         <li><a href="./projects.html">Projects</a></li>
         <li><a href="./blogs.html">Blogs</a></li>
