--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
     <title>My Personal Website</title>
     <script src="./script.js"></script>
   </head>
@@ -9,7 +13,7 @@
   <body>
     <div class="navbar">
       <ul>
-        <li id="font">John Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
+        <li id="font">John&nbsp;Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
         <li><a href="./index.html">About</a></li>
         <li><a href="./projects.html">Projects</a></li>
         <li><a href="./blogs.html">Blogs</a></li>
@@ -36,4 +40,5 @@
       </div>
     </div> -->
   </body>
+
 </html>
