--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,16 @@
     <div class="navbar">
       <ul>
         <li id="font">John&nbsp;Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
-        <li><a href="./index.html">About</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-        <li><a href="./blogs.html">Blogs</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+        <li id="child2"><a href="./index.html">About</a></li>
+        <li id="child3"><a href="./projects.html">Projects</a></li>
+        <li id="child4"><a href="./blogs.html">Blogs</a></li>
+        <li id="child5"><a href="./contact.html">Contact</a></li>
       </ul>
-    </div>
-    <div class="body-wrapper">
-
     </div>
   </body>
 
