--- a/index.html
+++ b/index.html
@@ -12,33 +12,20 @@
 
   <body>
     <div class="navbar">
+      
       <ul>
         <li id="font">John&nbsp;Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
-        <li><a href="./index.html">About</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-        <li><a href="./blogs.html">Blogs</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+        <li id="child2"><a href="./index.html">About</a></li>
+        <li id="child3"><a href="./projects.html">Projects</a></li>
+        <li id="child4"><a href="./blogs.html">Blogs</a></li>
+        <li id="child5"><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
-    <!-- <div class="body-wrapper">
-      <div class="profile-picture-wrapper">
-        <img src="profile.jpg" class="profile-picture" alt="Profile Picture" />
-      </div>
-      <div class="profile-text">
-        <div>Hello! I'm John</div>
-        <ul style="margin: 0; padding: 15px">
-          <li style="font-size: 20px; color: black">
-            Software Engineering Student Based Out Of Denver, CO
-          </li>
-          <li style="font-size: 20px; color: black">
-            Graduated from Washington State University with a degree in Mechanical Engineering
-          </li>
-          <li style="font-size: 20px; color: black">
-            Former Service Technician
-          </li>
-        </ul>
-      </div>
-    </div> -->
   </body>
 
 </html>
