--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css">
     <title>My Personal Website</title>
-    <script src="./script.js"></script>
   </head>
 
   <body>
@@ -21,12 +20,13 @@
           <span class="bar"></span>
           <span class="bar"></span>
         </a>
-        <li id="child2"><a href="./index.html">About</a></li>
-        <li id="child3"><a href="./projects.html">Projects</a></li>
-        <li id="child4"><a href="./blogs.html">Blogs</a></li>
-        <li id="child5"><a href="./contact.html">Contact</a></li>
+        <li class="menuItem" id="child2"><a href="./index.html">About</a></li>
+        <li class="menuItem" id="child3"><a href="./projects.html">Projects</a></li>
+        <li class="menuItem" id="child4"><a href="./blogs.html">Blogs</a></li>
+        <li class="menuItem" id="child5"><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
+    <script src="./script.js"></script>
   </body>
 
 </html>
