--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/e66ae3e757.js" crossorigin="anonymous"></script>
     <title>My Personal Website</title>
   </head>
 
   <body>
     <div class="navbar">
-      
-      
-      <ul>
-        <li id="font">John&nbsp;Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
+      <ul style="z-index: 100">
+        <li id="font">John&nbsp;Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo"/></li>
         <a href="#" class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -23,8 +22,24 @@
         <li class="menuItem" id="child2"><a href="./index.html">About</a></li>
         <li class="menuItem" id="child3"><a href="./projects.html">Projects</a></li>
         <li class="menuItem" id="child4"><a href="./blogs.html">Blogs</a></li>
-        <li class="menuItem" id="child5"><a href="./contact.html">Contact</a></li>
       </ul>
+    </div>
+    <div class="mainBody">
+      <div style="display: flex; justify-content: center;">
+        <img class="profilePicture" src="./profile.jpg" />
+      </div>
+      <div class="aboutSection">
+        <div id="aboutHeader">Hi! I'm John</div>
+        <ul style="padding-left: 10px; margin-top:0;">
+          <li>Software Engineering Student<br> Based out of Denver, CO</li>
+          <li>Graduated from Washington State<br> University with a degree in Mechanical<br> Engineering</li>
+          <li>Former Field Service Technician</li>
+        </ul>
+        <div id="contactBar">
+          <div><i class="fa-brands fa-linkedin fa-2x"></i></div>
+          <div><i class="fa-brands fa-github fa-2x"></i></div>
+        </div>
+      </div>
     </div>
     <script src="./script.js"></script>
   </body>
