Added Star Wars API folder for projects page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="navbar">
       <ul style="z-index: 100">
-        <li id="font">John&nbsp;Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo"/></li>
+        <li id="font">John&nbsp;Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
         <a href="#" class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -36,8 +36,10 @@
           <li>Former Field Service Technician</li>
         </ul>
         <div id="contactBar">
-          <div><i class="fa-brands fa-linkedin fa-2x"></i></div>
-          <div><i class="fa-brands fa-github fa-2x"></i></div>
+          <div><a id="linkedin" href="https://www.linkedin.com/in/john-finley-71ba22198/" target="_blank"><i
+                class="fa-brands fa-linkedin fa-2x"></i></a></div>
+          <div><a id="github" href="https://github.com/jfinley6" target="_blank"><i
+                class="fa-brands fa-github fa-2x"></i></a></div>
         </div>
       </div>
     </div>
