Finished projects page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="contactBar">
           <div><a id="linkedin" href="https://www.linkedin.com/in/john-finley-71ba22198/" target="_blank"><i
                 class="fa-brands fa-linkedin fa-2x"></i></a></div>
-          <div><a id="github" href="https://github.com/jfinley6" target="_blank"><i
+          <div style="margin-right: 150px"><a id="github" href="https://github.com/jfinley6" target="_blank"><i
                 class="fa-brands fa-github fa-2x"></i></a></div>
         </div>
       </div>
