Added meteor-coordinates-page to the projects page

--- a/blogs.html
+++ b/blogs.html
@@ -19,7 +19,7 @@
           <span class="bar"></span>
           <span class="bar"></span>
         </a>
-        <li class="menuItem" id="child2"><a href="./index.html">About</a></li>
+        <li class="menuItem" id="child2"><a href="./index.html">Home</a></li>
         <li class="menuItem" id="child3"><a href="./projects.html">Projects</a></li>
         <li class="menuItem" id="child4"><a href="./blogs.html">Blogs</a></li>
       </ul>
@@ -82,7 +82,7 @@
 
       </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
   </body>
 
 </html>
