--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <h1>Hello</h1>
     <div class="navbar">
       <ul style="z-index: 100">
         <li id="font">John&nbsp;Finley<img src="FS_wiki.png" class="nav-image" alt="flatiron logo" /></li>
@@ -19,7 +20,7 @@
           <span class="bar"></span>
           <span class="bar"></span>
         </a>
-        <li class="menuItem" id="child2"><a href="./index.html">About</a></li>
+        <li class="menuItem" id="child2"><a href="./index.html">Home</a></li>
         <li class="menuItem" id="child3"><a href="./projects.html">Projects</a></li>
         <li class="menuItem" id="child4"><a href="./blogs.html">Blogs</a></li>
       </ul>
@@ -43,7 +44,7 @@
         </div>
       </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
   </body>
 
 </html>
