--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
           <span class="bar"></span>
           <span class="bar"></span>
         </a>
-        <li class="menuItem" id="child2"><a href="./index.html">About</a></li>
+        <li class="menuItem" id="child2"><a href="./index.html">Home</a></li>
         <li class="menuItem" id="child3"><a href="./projects.html">Projects</a></li>
         <li class="menuItem" id="child4"><a href="./blogs.html">Blogs</a></li>
       </ul>
@@ -38,6 +38,15 @@
           </ul>
         </div>
         <div style="display: flex; flex-direction: column; align-items:center" class="container">
+          <h2>Meteor Coordinates Map</h2>
+          <img style="height: 246.45px" src="./Screen Shot 2022-07-03 at 5.24.14 PM.png">
+          <ul class="projectLinks">
+            <li><a href="./meteor-coordinates-map/index.html" target="_blank">Try It</a></li>
+            <li class="projectGithub"><a href="https://github.com/jfinley6/meteor-coordinates-map" target="_blank"><i
+                  class="fa-brands fa-github fa-2x"></i></a></li>
+          </ul>
+        </div>
+        <div style="display: flex; flex-direction: column; align-items:center" class="container">
           <h2>Star Wars Characters</h2>
           <img style="height: 246.45px" src="./starwarsapi.jpeg">
           <ul class="projectLinks">
@@ -48,7 +57,7 @@
 
         <div style="display: flex; flex-direction: column; align-items:center" class="container">
           <h2>Etch-A-Sketch</h2>
-          <img style="height: 246.45px" src="./etch-a-sketch.png">
+          <img style="height: 246.45px;" src="./etch-a-sketch.png">
           <ul  class="projectLinks">
             <li><a href="./etch-a-sketch/index.html" target="_blank">Try It</a></li>
             <li class="projectGithub"><a href="https://github.com/jfinley6/etch-a-sketch" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a></li>
@@ -56,7 +65,7 @@
         </div>
       </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
   </body>
 
 </html>
