Fixed blog and project page title padding

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
           </ul>
         </div>
         <div style="display: flex; flex-direction: column; align-items:center" class="container">
-          <h2>Meteor Coordinates Map</h2>
+          <h2>Meteorite Map</h2>
           <img style="height: 246.45px" src="./Screen Shot 2022-07-03 at 5.24.14 PM.png">
           <ul class="projectLinks">
             <li><a href="./meteor-coordinates-map/index.html" target="_blank">Try It</a></li>
