Added phase-1 project to Projects page

--- a/blogs.html
+++ b/blogs.html
@@ -35,8 +35,8 @@
       </div>
       <div id="wrapper-grid">
         <div class="container">
-          <p class="date">June 27, 2022</p>
-          <h2>First Blog</h2>
+          <p class="date">July, 17 2022</p>
+          <h2>Local Storage</h2>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi
           repellat accusantium hic error, molestiae enim sed. Vel enim nesciunt
           a sunt ipsa! Fugiat quam magni, voluptatem obcaecati quisquam id
@@ -46,7 +46,6 @@
             <li class="searchElement"><a href="#">HTML</a>,</li>
             <li class="searchElement"><a href="#">CSS</a>,</li>
             <li class="searchElement"><a href="#">JavaScript</a>,</li>
-            <li class="searchElement"><a href="#">React</a></li>
           </ul>
         </div>
         <div class="container">
