--- a/projects.html
+++ b/projects.html
@@ -30,11 +30,21 @@
       </div>
       <div id="wrapper-grid">
         <div style="display: flex; flex-direction: column; align-items:center" class="container">
+          <h2>Beer Browser</h2>
+          <img style="height: 246.45px;" src="./Screen Shot 2022-07-16 at 1.03.37 PM.png">
+          <ul class="projectLinks">
+            <li><a href="./phase-1-project/index.html" target="_blank">Try It</a></li>
+            <li class="projectGithub"><a href="https://github.com/jfinley6/phase-1-project" target="_blank"><i
+                  class="fa-brands fa-github fa-2x"></i></a></li>
+          </ul>
+        </div>
+        <div style="display: flex; flex-direction: column; align-items:center" class="container">
           <h2>Calculator</h2>
           <img style="height: 246.45px" src="./calculator.png">
           <ul class="projectLinks">
             <li><a href="./calculator/index.html" target="_blank">Try It</a></li>
-            <li class="projectGithub"><a href="https://github.com/jfinley6/calculator" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a></li>
+            <li class="projectGithub"><a href="https://github.com/jfinley6/calculator" target="_blank"><i
+                  class="fa-brands fa-github fa-2x"></i></a></li>
           </ul>
         </div>
         <div style="display: flex; flex-direction: column; align-items:center" class="container">
@@ -51,18 +61,22 @@
           <img style="height: 246.45px" src="./starwarsapi.jpeg">
           <ul class="projectLinks">
             <li><a href="./starwars-api/index.html" target="_blank">Try It</a></li>
-            <li class="projectGithub"><a href="https://github.com/jfinley6/Star-Wars-API-Characters" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a></li>
+            <li class="projectGithub"><a href="https://github.com/jfinley6/Star-Wars-API-Characters" target="_blank"><i
+                  class="fa-brands fa-github fa-2x"></i></a></li>
           </ul>
         </div>
 
         <div style="display: flex; flex-direction: column; align-items:center" class="container">
           <h2>Etch-A-Sketch</h2>
           <img style="height: 246.45px;" src="./etch-a-sketch.png">
-          <ul  class="projectLinks">
+          <ul class="projectLinks">
             <li><a href="./etch-a-sketch/index.html" target="_blank">Try It</a></li>
-            <li class="projectGithub"><a href="https://github.com/jfinley6/etch-a-sketch" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a></li>
+            <li class="projectGithub"><a href="https://github.com/jfinley6/etch-a-sketch" target="_blank"><i
+                  class="fa-brands fa-github fa-2x"></i></a></li>
           </ul>
         </div>
+
+
       </div>
     </div>
     <script src="./script.js" defer></script>
